--- a/comments/scss/_media.scss
+++ b/comments/scss/_media.scss
@@ -5,7 +5,7 @@
 	.header {
 		padding: 0 16px;
 	}
-	.header-menu__but, .header-menu__text, .header-personal__note {
+	.header-menu__buttons, .header-menu__text, .header-personal__note {
 		display: none;
 	}
 
